# circular-queue

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  build.rs  rustfmt.toml
.github/workflows/: ci.yml
src/: lib.rs  serde_support.rs
