[package]
name = "circular-queue"
version = "0.2.4" # remember to update html_root_url
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
description = "A circular buffer-like queue."
license = "MIT/Apache-2.0"
build = "build.rs"

readme = "README.md"
documentation = "https://docs.rs/circular-queue"
repository = "https://github.com/YaLTeR/circular-queue"
keywords = ["circular", "buffer", "ring", "queue", "container"]
categories = ["data-structures"]

[badges]
travis-ci = { repository = "YaLTeR/circular-queue" }
appveyor = { repository = "YaLTeR/circular-queue" }

[build-dependencies]
version_check = "0.9"

[features]
default = []
serde_support = ["serde"]
serde_support_test = ["serde", "serde_test", "serde_json", "bincode"]

[dependencies]
serde = {version = "1.0", optional = true, features = ["derive"]}
serde_test = {version = "1.0", optional = true}
serde_json = {version = "1.0", optional = true}
bincode = {version = "1.2.1", optional = true}
